--- a/javajam/index.html
+++ b/javajam/index.html
@@ -18,6 +18,7 @@
     <div id="wrapper">
         <header>
         <h1>javajamy coffee</h1>
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         </header>
         <nav>
             <a href="index.html">home</a> &nbsp;
@@ -25,6 +26,9 @@
             <a href="music.html">music</a> &nbsp;
             <a href="jobs.html">jobs</a>
          </nav>
+         <img src="A5JavaJamStarterImages/hero.jpg" alt="Hero Image">
+
+
          <main>
         <h2>do your hw here or somting </h2>
         <p>free coffee after purchase of said coffee &mdash; javyjamy cofefe is the name of the place... LEGALLY
