--- a/javajam/menu.html
+++ b/javajam/menu.html
@@ -17,6 +17,8 @@
 <body>
     <div id="wrapper">
     <header> 
+        <h1>Javajam Coffee Bar</h1>
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <nav><b>
             <a href="index.html">home</a> &nbsp;
             <a href="menu.html">menu</a> &nbsp;
@@ -24,7 +26,7 @@
             <a href="jobs.html">jobs</a>
         </b>
     </nav>
-
+    <img src="A5JavaJamStarterImages/mugs.jpg" alt="Coffee Mugs" height="200" width="200" align="right">
 <h2> coffee menu at the starbucks wannabe</h2>
 <d1>
     <dt><strong>JUST A FREEKING JAVA NO MILK OR SUGAR EVER YOU TAKE IT DARK</strong></dt>
