--- a/javajam/menu.html
+++ b/javajam/menu.html
@@ -16,17 +16,21 @@
 
 <body>
     <div id="wrapper">
-    <header> 
-        <h1>Javajam Coffee Bar</h1>
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <nav><b>
-            <a href="index.html">home</a> &nbsp;
-            <a href="menu.html">menu</a> &nbsp;
-            <a href="music.html">music</a> &nbsp;
-            <a href="jobs.html">jobs</a>
-        </b>
-    </nav>
-    <img src="A5JavaJamStarterImages/mugs.jpg" alt="Coffee Mugs" height="200" width="200" align="right">
+        <header>
+            <h1>JavaJam Coffee Bar</h1>
+            <img src="A5JavaJamStarterImages/mugs.jpg" alt="JavaJam Hero Image" id="hero-image">
+        </header>
+
+        <div id="content">
+            <nav id="sidebar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="music.html">Music</a></li>
+                    <li><a href="jobs.html">Jobs</a></li>
+                </ul>
+            </nav>
+    <img src="A5JavaJamStarterImages/mugs.jpg" alt="Coffee Mugs" height="200" width="200" align="center">
 <h2> coffee menu at the starbucks wannabe</h2>
 <d1>
     <dt><strong>JUST A FREEKING JAVA NO MILK OR SUGAR EVER YOU TAKE IT DARK</strong></dt>
