--- a/javajam/index.html
+++ b/javajam/index.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>addison&mdash;ljavyjamy coffee bar</title>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width",initial-scale="1.0">
-<meta name="description" content="javyjam coffee bar study">
-<meta name="author" content="addison">
-<meta name="keywords" content="homework 3, usu, data analytics">
-<link rel="stylesheet" href="color1.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
+    <title>JavaJam Coffee Bar</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="JavaJam Coffee Bar Study">
+    <meta name="author" content="Addison">
+    <meta name="keywords" content="homework 3, usu, data analytics">
+    <link rel="stylesheet" href="color1.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="wrapper">
         <header>
-        <h1>javajamy coffee</h1>
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+            <h1>JavaJam Coffee Bar</h1>
+            <img src="A5JavaJamStarterImages/hero.jpg" alt="JavaJam Hero Image" id="hero-image">
+            <link rel="icon" href="favicon.ico" type="image/x-icon">
         </header>
-        <nav>
-            <a href="index.html">home</a> &nbsp;
-            <a href="menu.html">menu</a> &nbsp;
-            <a href="music.html">music</a> &nbsp;
-            <a href="jobs.html">jobs</a>
-         </nav>
-         <img src="A5JavaJamStarterImages/hero.jpg" alt="Hero Image">
 
+        <div id="content">
+            <nav id="sidebar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="music.html">Music</a></li>
+                    <li><a href="jobs.html">Jobs</a></li>
+                </ul>
+            </nav>
 
-         <main>
-        <h2>do your hw here or somting </h2>
-        <p>free coffee after purchase of said coffee &mdash; javyjamy cofefe is the name of the place... LEGALLY
-            enjoy coffee or a light snack of coffee. we arent hiring.
-        </p>
-        <ul>
-            <li>fancy schmancy coffee and organic bottled water (arrowhead)</li>
-            <li>coffee dipped in bagels (bagel not included. srlys its byob (bring your own bagle))</li>
-            <li>machine made salad</li>
-            <li>open aux chord evening but seriously no chappel roan if i hear one more song of hers so help me im quiting</li>
-        </ul>
-        <div>
-            The White House <br>
-1600 Pennsylvania Ave NW<br>
-Washington, DC 20500<br>
-(1800)-867-5309
+            <main id="main-content">
+                <h2>Do your HW here or something</h2>
+                <p>Free coffee after purchase of said coffee &mdash; Javajamy Cofefe is the name of the place... LEGALLY enjoy coffee or a light snack of coffee. We aren't hiring.</p>
+                <ul>
+                    <li>Fancy schmancy coffee and organic bottled water (Arrowhead)</li>
+                    <li>Coffee dipped in bagels (Bagel not included. Seriously it's BYOB (Bring Your Own Bagel))</li>
+                    <li>Machine made salad</li>
+                    <li>Open aux chord evening but seriously no Chapel Roan. If I hear one more song of hers so help me I'm quitting.</li>
+                </ul>
+
+                <address>
+                    The White House <br>
+                    1600 Pennsylvania Ave NW<br>
+                    Washington, DC 20500<br>
+                    (1800)-867-5309
+                </address>
+            </main>
         </div>
-        </main>
+
         <footer>
-            <i>copy wright &copy; 3005 javyjavmmers coffee or bar <br>
-        <a href="mailto:i_aint_putting_my_name@ondis.com">adam.thomas@aol.com</a>
-    </i></footer>
-</footer>
-</div>
-   
+            <p>&copy; 3005 JavaJam Coffee Bar <br>
+            <a href="mailto:i_aint_putting_my_name@ondis.com">adam.thomas@aol.com</a></p>
+        </footer>
+    </div>
 </body>
+</html>
