--- a/javajam/assignment 8/a8/JavaJam9/jobs.html
+++ b/javajam/assignment 8/a8/JavaJam9/jobs.html
@@ -50,8 +50,11 @@
       </form>
     </main>
     <footer>
-      <p>&copy; 3005 JavaJam Coffee Bar &mdash; Keeping you wired since 0001</p>
-      <p>Need more caffeine?(youre not addicted i promise) <a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a></p>
+      Copyright &copy; 20XX JavaJam Coffee Bar<br>
+      <a href="mailto:dingoatemye@baby.com">barackobama@usa.com</a>
+      <div>
+        <p id="dateupdate"></p>
+        <script src="js/dateupdate.js"></script>
     </footer>
   </div>
 </body>
