--- a/javajam/assignment 8/a8/JavaJam9/menu.html
+++ b/javajam/assignment 8/a8/JavaJam9/menu.html
@@ -53,7 +53,10 @@
     </main>
     <footer>
       Copyright &copy; 20XX JavaJam Coffee Bar<br>
-      <a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
+      <a href="mailto:dingoatemye@baby.com">barackobama@usa.com</a>
+      <div>
+        <p id="dateupdate"></p>
+        <script src="js/dateupdate.js"></script>
     </footer>
   </div>
 </body>
