--- a/javajam/assignment 8/a8/JavaJam9/index.html
+++ b/javajam/assignment 8/a8/JavaJam9/index.html
@@ -48,13 +48,17 @@
       <div>
         12010 Garrett Bay Road<br>
         Ellison Bay, WI 54210<br>
-        <a id="mobile" href="tel:888-555-5555">888-555-5555</a><span id="desktop">888-555-
+        <a id="mobile" href="tel:8675309">888-555-5555</a><span id="desktop">888-555-
           5555</span><br><br>
       </div>
     </main>
     <footer>
       Copyright &copy; 20XX JavaJam Coffee Bar<br>
-      <a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
+      <a href="mailto:dingoatemye@baby.com">barackobama@usa.com</a>
+      <div>
+        <p id="dateupdate"></p>
+        <script src="js/dateupdate.js"></script>
+      </div>
     </footer>
   </div>
 </body>
