--- a/project/index.html
+++ b/project/index.html
@@ -11,7 +11,7 @@
         <img src="/api/placeholder/300/200" alt="Funny Cat" style="max-width: 300px;">
         
         <div>
-            <a href="mind-reader.html">Mind Reader Page</a>
+            <a href="mind-reader.html">expereince your mind being read!</a>
             <br>
             <a href="shrimp-page.html">Get Shrimped!</a>
         </div>
