--- a/project/index.html
+++ b/project/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Are you Shrimpsperienced?</h1>
-        <img src="/api/placeholder/300/200" alt="Funny Cat" style="max-width: 300px;">
+        <h1>Are you Shrimpsperienced? have your sound on full volume if youre cool</h1>
+        <img src="/images/cool-cat.jpg" alt="cool Cat" style="max-width: 300px;">
         
         <div>
-            <a href="mind-reader.html">expereince your mind being read!</a>
+            <a href="mind-reading.html">expereince your shrimp mind being read!</a>
             <br>
-            <a href="shrimp-page.html">Get Shrimped!</a>
+            <a href="get-shrimped.html">Get Shrimped!</a>
+            <br>
+            <a href="random-shrimp.html">be brave</a>
         </div>
     </div>
 </body>
